k8s/azure_aks/3_storage/ingress_frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-k8s-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - www.minepla.in
    secretName: www-crt-secret
  rules:
  - host: www.miyop.in
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: private-frontend
            port:
              number: 80
